Create Header in index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,29 @@
 </head>
 
 <body>
-    Hey there! This is a landing page.
-
     <!-- Header -->
+    <div class="header">
+        <div class="navbar">
+            <div class="header-logo">
+                <img src="https://www.freepnglogos.com/uploads/logo-website-png/logo-website-png-website-logo-design-1.png" alt="logo">
+            </div>
+            <div class="header-links">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </div>
+        </div>
+        <div class="header-content">
+            <div class="info">
+                <div class="title">Title</div>
+                <div class="subtitle">Subtitle info lorem ipsum blah blah blah</div>
+                <div class="signup">Sign up</div>
+            </div>
+            <div class="header-image">
+                <img src="https://www.freepnglogos.com/uploads/logo-website-png/logo-website-png-website-logo-design-1.png" alt="logo">
+            </div>
+        </div>
+    </div>
 
     <!-- Random info -->
 
