Get the header aligned

--- a/index.html
+++ b/index.html
@@ -5,20 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Landing Page</title>
 </head>
 
 <body>
     <!-- Header -->
     <div class="header">
-        <div class="navbar">
-            <div class="header-logo">
-                <img src="https://www.freepnglogos.com/uploads/logo-website-png/logo-website-png-website-logo-design-1.png" alt="logo">
-            </div>
-            <div class="header-links">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
+        <div class="navbar-container">
+            <div class="navbar">
+                <div class="header-logo">
+                    <img src="https://www.freepnglogos.com/uploads/logo-website-png/logo-website-png-website-logo-design-1.png" alt="logo">
+                </div>
+                <div class="header-links">
+                    <div> <!-- This shit is starting to piss me off -->
+                        <a href="http://example.com">Home</a>
+                    </div>
+                    <div class="link">
+                        <a href="http://example.com">About</a>
+                    </div>
+                    <div class="link">
+                        <a href="http://example.com">Contact</a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="header-content">
